--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,10 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(cpp_template_proj VERSION 0.1.0 LANGUAGES C CXX)
+cmake_minimum_required(VERSION 3.20.0)
+project(proxy VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(${PROJECT_NAME}
-  main.cpp
-  TcpSocket.h
-  TcpSocket.cpp
-  Server.h
-  Server.cpp
-)
+add_executable(${PROJECT_NAME})
+add_subdirectory(source)
 
-#add_subdirectory(client)
+target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra -Werror -pedantic)
 
 if(ASAN_ENABLED)
   if(MSVC)
@@ -18,4 +13,8 @@ if(ASAN_ENABLED)
     target_compile_options(${PROJECT_NAME} PUBLIC -fsanitize=address)
     target_link_options(${PROJECT_NAME} PUBLIC -fsanitize=address)
   endif()
+endif()
+
+if(GPERF_ENABLED)
+target_compile_options(${PROJECT_NAME} PUBLIC -pg)
 endif()
