--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(proxy VERSION 0.1.0 LANGUAGES C CXX)
 add_executable(${PROJECT_NAME})
 add_subdirectory(source)
 
-if (WIN32)
+if (MSVC)
 target_compile_options(${PROJECT_NAME} PUBLIC /Wall /pedantic)
 else()
 target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra -Werror -pedantic)
